--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@popperjs/core": "^2.11.6"
+		"@popperjs/core": "^2.11.6",
+		"marked": "^4.1.0"
 	}
 }
